--- a/inde.html
+++ b/inde.html
@@ -8,7 +8,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="style.css" />
-    <title>Timer</title>
+    <title>Timer JS</title>
   </head>
   <body>
     <div class="container">
